--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -1,33 +1,36 @@
 <!doctype html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
 
-    <title>Sleep Outside | Cart</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/style.css" />
+  <title>Sleep Outside | Cart</title>
 
-    <script src="../js/cart.js" type="module"></script>
-  </head>
+  <link rel="stylesheet" href="/css/style.css" />
 
-  <body>
-    <header class="divider" id="main-header"></header>
+  <script src="../js/cart.js" type="module"></script>
+</head>
 
-    <main class="divider">
-      <section class="products">
-        <h2>My Cart</h2>
+<body>
+  <header class="divider" id="main-header"></header>
 
-        <ul class="product-list">
-        </ul>
-      </section>
-      <div class="cart-footer-hide">
-        <p class="cart-total"> </p>
-      </div>
-    </main>
+  <main class="divider">
+    <section class="products">
+      <h2>My Cart</h2>
+
+      <ul class="product-list">
+      </ul>
+    </section>
+    <div class="cart-footer-hide">
+      <p class="cart-total"> </p>
+    </div>
+    <a class="checkout-button" href="/checkout/index.html">Checkout</a>
+  </main>
 
   <footer id="main-footer"></footer>
 </body>
+
 </html>
