pushing before step 5 in activity

--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -9,7 +9,8 @@
 
   <title>Sleep Outside | Checkout</title>
 
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <script type="module" src="/js/CheckoutProcess.mjs"></script>
 </head>
 
 <body>
@@ -43,10 +44,6 @@
     </form>
     <div class="orderSummary">
       <h3>Order Summary:</h3>
-      <p class="subtotal">Subtotal:</p>
-      <p class="shippingEstimate">Shipping Estimate:</p>
-      <p clas="tax">Tax:</p>
-      <p class="orderTotal">Order Total:</p>
     </div>
   </main>
 
