--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -10,7 +10,7 @@
   <title>Sleep Outside | Checkout</title>
 
   <link rel="stylesheet" href="/css/style.css" />
-  <script type="module" src="/js/CheckoutProcess.mjs"></script>
+  <script type="module" src="/js/checkout.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <section class="products">
       <h2>Review & Place your Order</h2>
     </section>
-    <form class="checkout-form">
+    <form name="checkout-form" class="checkout-form">
       <fieldset class="fieldset">
         <legend>Personal Info</legend>
 
@@ -40,7 +40,7 @@
         <label>Security Code:<input type="text" id="securityCode" name="securityCode" required pattern="\d{3}"></label>
       </fieldset>
 
-      <input type="submit" value="Checkout">
+      <input type="submit" value="Checkout" id="submitButton">
     </form>
     <div class="orderSummary">
       <h3>Order Summary:</h3>
