Cart Total corrected, minor things on team activity corrected

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -25,6 +25,9 @@
       <div class="cart-footer-hide">
         <p class="cart-total"></p>
       </div>
+      <div>
+        <a href="/checkout/index.html"><button class="checkout-button" >CHECKOUT</button></a>
+      </div>
     </main>
 
     <footer id="main-footer"></footer>
