Individual Activity Done with stretch

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -26,7 +26,9 @@
         <p class="cart-total"></p>
       </div>
       <div>
-        <a href="/checkout/index.html"><button class="checkout-button" >CHECKOUT</button></a>
+        <a class="checkout-button" href="/checkout/index.html"
+          ><button class="checkout-button">CHECKOUT</button></a
+        >
       </div>
     </main>
 
