--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -24,27 +24,57 @@
         <form name="checkout-form" class="checkout-form">
           <fieldset class="fieldset">
             <legend>Personal Info</legend>
-            <label>First Name: <input type="text" name="fname" id="fname" required></label>
-            <label>Last Name: <input type="text" name="lname" id="lname" required></label>
-            <label>Street: <input type="text" name="street" id="street" required></label>
-            <label>City:<input type="text" id="city" name="city" required></label>
-            <label>State: <input type="text" name="state" id="state" required></label>
-            <label>Zip Code: <input type="number" name="zip" id="zip" required></label>
+            <label
+              >First Name: <input type="text" name="fname" id="fname" required
+            /></label>
+            <label
+              >Last Name: <input type="text" name="lname" id="lname" required
+            /></label>
+            <label
+              >Street: <input type="text" name="street" id="street" required
+            /></label>
+            <label
+              >City:<input type="text" id="city" name="city" required
+            /></label>
+            <label
+              >State: <input type="text" name="state" id="state" required
+            /></label>
+            <label
+              >Zip Code: <input type="number" name="zip" id="zip" required
+            /></label>
           </fieldset>
           <fieldset class="fieldset">
             <legend>Payment Info</legend>
-            <label>Credit Card: <input type="number" name="cardNumber" id="cardNumber" required pattern="\d{16}"></label>
-            <label>Expiration Date: <input type="text" name="expiration" id="expiration" required pattern="\d{2}/\d{2}"></label>
-            <label>Security Code: <input type="number" name="code" id="code" required pattern="\d{3}"></label>
+            <label
+              >Credit Card:
+              <input
+                type="text"
+                name="cardNumber"
+                id="cardNumber"
+                pattern="\d{16}"
+                required
+            /></label>
+            <label
+              >Expiration Date:
+              <input
+                type="text"
+                name="expiration"
+                id="expiration"
+                pattern="\d{2}/\d{2}"
+                required
+            /></label>
+            <label
+              >Security Code:
+              <input type="text" name="code" id="code" pattern="\d{3}" required
+            /></label>
           </fieldset>
-          <input type="submit" id="submitButton" value="Checkout">
+          <input type="submit" id="submitButton" value="Checkout" />
         </form>
-        
+
         <div class="orderSummary">
           <h3>Order Summary</h3>
         </div>
       </div>
-      
     </main>
 
     <footer id="main-footer"></footer>
